# rootkit_research

./: .gitignore  .gitmodules  README.md  STEP1.md  STEP2.md  STEP3.md  STEP4.md  STEP5.md  STEP6.md  ls_strace.txt  lsmod_strace.txt  netstat_strace.txt  proc_net_tcp.txt  ps_strace.txt  run.sh  udp_server_strace.txt
net_tool/: CMakeLists.txt  main.c
rootkit/: CMakeLists.txt  Kbuild  Makefile  helpers.c  step1.c  step2.c  step3.c  step5.c  step6.c  yarin_module.c  yarin_module_main.c
rootkit/include/: helpers.h  step1.h  step2.h  step3.h  step6.h
